[gd_scene load_steps=6 format=3 uid="uid://scwoy3qwwga0"]

[ext_resource type="Script" path="res://scripts/office/object/auto_sell_machine.gd" id="1_jc0b7"]
[ext_resource type="Shader" path="res://shaders/sprite_outline.gdshader" id="2_mrbph"]
[ext_resource type="Texture2D" uid="uid://dgtdpo6hm7px0" path="res://assets/tilesets/office/auto_sell_machine.png" id="3_gs6mh"]
[ext_resource type="AudioStream" uid="uid://dfps12itea5e4" path="res://assets/audio/auto_sell_machine.wav" id="4_60f0x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gg6vh"]
shader = ExtResource("2_mrbph")
shader_parameter/outline_width = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[node name="auto_sell_machine" type="StaticBody2D"]
position = Vector2(-8, -14)
script = ExtResource("1_jc0b7")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gg6vh")
texture = ExtResource("3_gs6mh")
region_rect = Rect2(757, 46, 22, 34)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -11.0
offset_top = -13.0
offset_right = 11.0
offset_bottom = 22.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_60f0x")

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
